hopefully fix modal closing on mobile

--- a/src/pages/Project/Modal/styles.module.css
+++ b/src/pages/Project/Modal/styles.module.css
@@ -18,6 +18,7 @@
 
 .closeButton:hover {
   filter: brightness(1.5);
+  cursor: pointer;
 }
 
 @media (max-width: 380px) {
